--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://chy.li'
 languageCode = 'en-us'
-title = "chyli. : The Fuwa-est of all time"
+title = "chyli. : The Fuwa Fuwa-est of all time"
 theme = 'hugo-bearblog'
 
 # Generate a nice robots.txt for SEO
@@ -30,7 +30,7 @@ ignoreErrors = ["error-disable-taxonomy"]
   # Another "title" :-). This one is used as the site_name on the Hugo's internal
   # opengraph structured data template.
   # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "chyli."
+  title = "chyli. chy.li Fuwa Fuwa Time-mu"
 
   # This theme will, by default, inject a made-with-line at the bottom of the page.
   # You can turn it off, but we would really appreciate if you don’t :-).
