--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-bearblog"]
 	path = themes/hugo-bearblog
-	url = https://owu.se/p-p/minoplhy/hugo-bearblog.git
+	url = https://chy.li/p-p/minoplhy/hugo-bearblog.git
