blog: update, 7: fix url

--- a/static/7/markers/dataideas.json
+++ b/static/7/markers/dataideas.json
@@ -2,6 +2,6 @@
   {
     "lat": 32.99, 
     "lon": -96.97,
-    "popup": "<a href=https://chy.li/7/dataideas/dataideas-1 target='_blank' rel='noopener noreferrer'>DataIdeas-1 US 🇺🇸</a>"
+    "popup": "<a href=https://chy.li/7/dataideas-1 target='_blank' rel='noopener noreferrer'>DataIdeas-1 US 🇺🇸</a>"
   }
 ]
